--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "chenhongzhang/rsa",
+    "name": "chenhongzhang/pikirasa",
     "type": "library",
     "description": "PKI public/private RSA key encryption using the OpenSSL extension",
     "keywords": ["pki", "rsa", "encryption", "private key", "public key", "crypt", "cryptography", "openssl"],
-    "homepage": "https://github.com/chenhongzhang/rsa",
+    "homepage": "https://github.com/chenhongzhang/pikirasa",
     "license": "BSD",
     "authors": [
         {
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Rsa": "lib/"
+            "Pikirasa": "lib/"
         }
     }
 }
